<resources>
    <string name="app_name">CNIT_355_PROJECT</string>
    <string name="centsible">Centsible</string>
    <string name="login_subtitle">Welcome! Please Log In</string>
    <string name="signup_subtitle">Create a new account!</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="back">BACK</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="passwordDoubleCheck">Re-Enter Password</string>
    <string name="DOB">Birthday: mm/dd/yyyy</string>
    <string name="overview">OVERVIEW</string>
    <string name="billCalendar">BILL CALENDAR</string>
    <string name="debtTracker">DEBT TRACKER</string>
    <string name="receiptScanner">Expense Tracker</string>
    <string name="btnAddBill">Add Bill to List</string>
    <string name="placeholder">placeholder text</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_items_here_to_record_your_spending">Add items here to record your spending</string>
    <string name="add_items_to_budget">Add Items to Budget</string>
    <string name="record_your_expenses">Record Your Expenses</string>
    <string name="expense_tracker">Expense Tracker</string>
    <string name="bill_calendar_subtitle">Organize your Reoccurring Expenses</string>
</resources>